--- a/.github/workflows/github-actions.demo.yml
+++ b/.github/workflows/github-actions.demo.yml
@@ -9,4 +9,12 @@ on:
     - cron: '15 6 * * 0'
   workflow_dispatch:
         
+jobs:
+  Build:
+    runs-on: ubuntu-latest
+    steps:
+      - run: |
+          echo "$ {{ github.event_name }}"
+          echo "$ {{ github.ref }}"
+        
     
