--- a/.github/workflows/github-actions.demo.yml
+++ b/.github/workflows/github-actions.demo.yml
@@ -14,7 +14,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: |
-          echo "$ {{ github.event_name }}"
-          echo "$ {{ github.ref }}"
-        
+          echo `$ {{ github.event_name }}`
+          echo `$ {{ github.ref }}`
+      
+      - uses: actions/checkout@v3.3.0
+          
+      - name: List files in the repository
+        run: |
+          echo "The repository ${{ github.repository }} contains the following files:"
+          tree 
     
